--- a/Dylan_Scott_Case_Study1.ipynb
+++ b/Dylan_Scott_Case_Study1.ipynb
@@ -1886,6 +1886,63 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'entropy_Density',\n",
+       " 'entropy_ElectronAffinity',\n",
+       " 'entropy_FusionHeat',\n",
+       " 'entropy_Valence',\n",
+       " 'entropy_atomic_mass',\n",
+       " 'entropy_atomic_radius',\n",
+       " 'entropy_fie',\n",
+       " 'gmean_FusionHeat',\n",
+       " 'gmean_Valence',\n",
+       " 'gmean_atomic_mass',\n",
+       " 'gmean_atomic_radius',\n",
+       " 'gmean_fie',\n",
+       " 'range_atomic_radius',\n",
+       " 'std_Density',\n",
+       " 'std_ElectronAffinity',\n",
+       " 'std_FusionHeat',\n",
+       " 'std_ThermalConductivity',\n",
+       " 'std_Valence',\n",
+       " 'std_atomic_mass',\n",
+       " 'std_atomic_radius',\n",
+       " 'std_fie',\n",
+       " 'wtd_entropy_FusionHeat',\n",
+       " 'wtd_entropy_Valence',\n",
+       " 'wtd_entropy_atomic_radius',\n",
+       " 'wtd_gmean_Density',\n",
+       " 'wtd_gmean_FusionHeat',\n",
+       " 'wtd_gmean_Valence',\n",
+       " 'wtd_gmean_atomic_mass',\n",
+       " 'wtd_gmean_atomic_radius',\n",
+       " 'wtd_gmean_fie',\n",
+       " 'wtd_mean_FusionHeat',\n",
+       " 'wtd_mean_Valence',\n",
+       " 'wtd_std_Density',\n",
+       " 'wtd_std_FusionHeat',\n",
+       " 'wtd_std_ThermalConductivity',\n",
+       " 'wtd_std_atomic_mass',\n",
+       " 'wtd_std_atomic_radius',\n",
+       " 'wtd_std_fie'}"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "corrl"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 46,
    "metadata": {},
    "outputs": [
