--- a/case study 1/Group_Case_Study1.ipynb
+++ b/case study 1/Group_Case_Study1.ipynb
@@ -6,9 +6,10 @@
    "source": [
     "# Write-up\n",
     "\n",
-    "Case Study 1:\n",
-    "Dylan Scott\n",
-    " \n"
+    "Case Study 1: \\\n",
+    "Dylan Scott \\\n",
+    "Taylor Bonar \\\n",
+    "Jobin Joseph \n"
    ]
   },
   {
