start case study 2 code

--- a/case study 2/Dylan/CaseStudy2_D.ipynb
+++ b/case study 2/Dylan/CaseStudy2_D.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,11 +23,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Instructions\n",
+    "\n",
+    "Your case study is to build a classifier using logistic regression to predict hospital readmittance. \n",
+    "There is missing data that must be imputed. Once again, discuss variable importances as part of your submission.\n",
+    "\n",
+    "### Team:\n",
+    "- Dylan Scott\n",
+    "- Jobin Joseph\n",
+    "- Taylor Bonar\n",
+    "- Satvik Ajmera"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#data\n",
+    "df = pd.read_csv(\"diabetic_data.csv\")\n"
+   ]
   }
  ],
  "metadata": {
@@ -40,7 +59,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.10.1"
   },
   "orig_nbformat": 4
