--- a/week 5/ICA Logistic.ipynb
+++ b/week 5/ICA Logistic.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,18 +27,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<bound method NDFrame.describe of      pixel_0_0  pixel_0_1  pixel_0_2  pixel_0_3  pixel_0_4  pixel_0_5  \\\n",
+       "0          0.0        0.0        5.0       13.0        9.0        1.0   \n",
+       "1          0.0        0.0        0.0       12.0       13.0        5.0   \n",
+       "2          0.0        0.0        1.0        9.0       15.0       11.0   \n",
+       "3          0.0        0.0        0.0        0.0       14.0       13.0   \n",
+       "4          0.0        0.0        3.0       13.0       11.0        7.0   \n",
+       "..         ...        ...        ...        ...        ...        ...   \n",
+       "355        0.0        0.0        1.0       12.0       10.0        3.0   \n",
+       "356        0.0        0.0        8.0       12.0       11.0        6.0   \n",
+       "357        0.0        0.0        5.0       16.0       10.0        0.0   \n",
+       "358        0.0        0.0        6.0       12.0       12.0        6.0   \n",
+       "359        0.0        0.0        6.0       16.0       13.0       11.0   \n",
+       "\n",
+       "     pixel_0_6  pixel_0_7  pixel_1_0  pixel_1_1  ...  pixel_6_6  pixel_6_7  \\\n",
+       "0          0.0        0.0        0.0        0.0  ...        0.0        0.0   \n",
+       "1          0.0        0.0        0.0        0.0  ...        0.0        0.0   \n",
+       "2          0.0        0.0        0.0        0.0  ...        0.0        0.0   \n",
+       "3          1.0        0.0        0.0        0.0  ...        0.0        0.0   \n",
+       "4          0.0        0.0        0.0        0.0  ...        1.0        0.0   \n",
+       "..         ...        ...        ...        ...  ...        ...        ...   \n",
+       "355        0.0        0.0        0.0        0.0  ...        0.0        0.0   \n",
+       "356        0.0        0.0        0.0        0.0  ...        0.0        0.0   \n",
+       "357        0.0        0.0        0.0        0.0  ...        5.0        0.0   \n",
+       "358        0.0        0.0        0.0        0.0  ...        0.0        0.0   \n",
+       "359        1.0        0.0        0.0        0.0  ...        1.0        0.0   \n",
+       "\n",
+       "     pixel_7_0  pixel_7_1  pixel_7_2  pixel_7_3  pixel_7_4  pixel_7_5  \\\n",
+       "0          0.0        0.0        6.0       13.0       10.0        0.0   \n",
+       "1          0.0        0.0        0.0       11.0       16.0       10.0   \n",
+       "2          0.0        0.0        1.0       10.0       13.0        3.0   \n",
+       "3          0.0        0.0        0.0        1.0       13.0       16.0   \n",
+       "4          0.0        0.0        2.0       12.0       13.0        4.0   \n",
+       "..         ...        ...        ...        ...        ...        ...   \n",
+       "355        0.0        0.0        1.0        7.0       12.0       10.0   \n",
+       "356        0.0        0.0        4.0       11.0       12.0        7.0   \n",
+       "357        0.0        0.0        4.0       15.0       16.0        8.0   \n",
+       "358        0.0        0.0        2.0       11.0       10.0        4.0   \n",
+       "359        0.0        0.0        6.0       16.0       14.0        6.0   \n",
+       "\n",
+       "     pixel_7_6  pixel_7_7  \n",
+       "0          0.0        0.0  \n",
+       "1          0.0        0.0  \n",
+       "2          0.0        0.0  \n",
+       "3          1.0        0.0  \n",
+       "4          0.0        0.0  \n",
+       "..         ...        ...  \n",
+       "355        0.0        0.0  \n",
+       "356        0.0        0.0  \n",
+       "357        1.0        0.0  \n",
+       "358        0.0        0.0  \n",
+       "359        0.0        0.0  \n",
+       "\n",
+       "[360 rows x 64 columns]>"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from sklearn.datasets import load_digits\n",
     "X,y = load_digits(n_class=2,return_X_y=True,as_frame=True)\n",
-    "digits = load_digits(n_class=2)"
+    "digits = load_digits(n_class=2)\n",
+    "X.describe"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +139,7 @@
        "LogisticRegression()"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -88,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -115,30 +179,135 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "25\n",
-      "47\n",
-      "8\n",
-      "46\n",
-      "20\n",
-      "45\n",
-      "44\n",
-      "12\n",
-      "3\n",
-      "23\n"
+      "[15, 49, 38, 33, 55, 51, 6, 7, 17, 4]\n"
      ]
     }
    ],
    "source": [
+    "values_l =[]\n",
     "for _ in range(10):\n",
-    "\tvalue = randint(0, 64)\n",
-    "\tprint(value)"
+    "\tvalue = randint(1, 64)\n",
+    "\tvalues_l.append(value)\n",
+    "print(values_l)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import random\n",
+    "# a_list = range(25)\n",
+    "# indexes = sorted(random.sample(range(len(a_list)),len(a_list)//10),reverse=True)\n",
+    "# for i in indexes:\n",
+    "#     del X_train.iloc[i]\n",
+    "# print(X_train)\n",
+    "# new_list = [x for x in a_list if random.random()>0.1]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# X_train.loc[\n",
+    "#     X_train.query('value == 1').sample(frac=.1).index,\n",
+    "#     'value'\n",
+    "# ] = 0\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# for i in values_l:\n",
+    "#     X_train = X_train.iloc[[i]] = np.nan"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "\"None of [Int64Index([15], dtype='int64')] are in the [columns]\"",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\drsco\\Documents\\GitHub\\QTW\\qtw\\week 3\\ICA Logistic.ipynb Cell 11'\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/drsco/Documents/GitHub/QTW/qtw/week%203/ICA%20Logistic.ipynb#ch0000017?line=0'>1</a>\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m values_l:\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/drsco/Documents/GitHub/QTW/qtw/week%203/ICA%20Logistic.ipynb#ch0000017?line=1'>2</a>\u001b[0m     X_train[[i]] \u001b[39m=\u001b[39m X_train[[i]]\u001b[39m.\u001b[39msample(frac\u001b[39m=\u001b[39m\u001b[39m0.5\u001b[39m)\n",
+      "File \u001b[1;32mc:\\Users\\drsco\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\pandas\\core\\frame.py:3511\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   <a href='file:///c%3A/Users/drsco/AppData/Local/Programs/Python/Python310/lib/site-packages/pandas/core/frame.py?line=3508'>3509</a>\u001b[0m     \u001b[39mif\u001b[39;00m is_iterator(key):\n\u001b[0;32m   <a href='file:///c%3A/Users/drsco/AppData/Local/Programs/Python/Python310/lib/site-packages/pandas/core/frame.py?line=3509'>3510</a>\u001b[0m         key \u001b[39m=\u001b[39m \u001b[39mlist\u001b[39m(key)\n\u001b[1;32m-> <a href='file:///c%3A/Users/drsco/AppData/Local/Programs/Python/Python310/lib/site-packages/pandas/core/frame.py?line=3510'>3511</a>\u001b[0m     indexer \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mcolumns\u001b[39m.\u001b[39;49m_get_indexer_strict(key, \u001b[39m\"\u001b[39;49m\u001b[39mcolumns\u001b[39;49m\u001b[39m\"\u001b[39;49m)[\u001b[39m1\u001b[39m]\n\u001b[0;32m   <a href='file:///c%3A/Users/drsco/AppData/Local/Programs/Python/Python310/lib/site-packages/pandas/core/frame.py?line=3512'>3513</a>\u001b[0m \u001b[39m# take() does not accept boolean indexers\u001b[39;00m\n\u001b[0;32m   <a href='file:///c%3A/Users/drsco/AppData/Local/Programs/Python/Python310/lib/site-packages/pandas/core/frame.py?line=3513'>3514</a>\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mgetattr\u001b[39m(indexer, \u001b[39m\"\u001b[39m\u001b[39mdtype\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39mNone\u001b[39;00m) \u001b[39m==\u001b[39m \u001b[39mbool\u001b[39m:\n",
+      "File \u001b[1;32mc:\\Users\\drsco\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\pandas\\core\\indexes\\base.py:5782\u001b[0m, in \u001b[0;36mIndex._get_indexer_strict\u001b[1;34m(self, key, axis_name)\u001b[0m\n\u001b[0;32m   <a href='file:///c%3A/Users/drsco/AppData/Local/Programs/Python/Python310/lib/site-packages/pandas/core/indexes/base.py?line=5778'>5779</a>\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m   <a href='file:///c%3A/Users/drsco/AppData/Local/Programs/Python/Python310/lib/site-packages/pandas/core/indexes/base.py?line=5779'>5780</a>\u001b[0m     keyarr, indexer, new_indexer \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_reindex_non_unique(keyarr)\n\u001b[1;32m-> <a href='file:///c%3A/Users/drsco/AppData/Local/Programs/Python/Python310/lib/site-packages/pandas/core/indexes/base.py?line=5781'>5782</a>\u001b[0m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_raise_if_missing(keyarr, indexer, axis_name)\n\u001b[0;32m   <a href='file:///c%3A/Users/drsco/AppData/Local/Programs/Python/Python310/lib/site-packages/pandas/core/indexes/base.py?line=5783'>5784</a>\u001b[0m keyarr \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mtake(indexer)\n\u001b[0;32m   <a href='file:///c%3A/Users/drsco/AppData/Local/Programs/Python/Python310/lib/site-packages/pandas/core/indexes/base.py?line=5784'>5785</a>\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39misinstance\u001b[39m(key, Index):\n\u001b[0;32m   <a href='file:///c%3A/Users/drsco/AppData/Local/Programs/Python/Python310/lib/site-packages/pandas/core/indexes/base.py?line=5785'>5786</a>\u001b[0m     \u001b[39m# GH 42790 - Preserve name from an Index\u001b[39;00m\n",
+      "File \u001b[1;32mc:\\Users\\drsco\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\pandas\\core\\indexes\\base.py:5842\u001b[0m, in \u001b[0;36mIndex._raise_if_missing\u001b[1;34m(self, key, indexer, axis_name)\u001b[0m\n\u001b[0;32m   <a href='file:///c%3A/Users/drsco/AppData/Local/Programs/Python/Python310/lib/site-packages/pandas/core/indexes/base.py?line=5839'>5840</a>\u001b[0m     \u001b[39mif\u001b[39;00m use_interval_msg:\n\u001b[0;32m   <a href='file:///c%3A/Users/drsco/AppData/Local/Programs/Python/Python310/lib/site-packages/pandas/core/indexes/base.py?line=5840'>5841</a>\u001b[0m         key \u001b[39m=\u001b[39m \u001b[39mlist\u001b[39m(key)\n\u001b[1;32m-> <a href='file:///c%3A/Users/drsco/AppData/Local/Programs/Python/Python310/lib/site-packages/pandas/core/indexes/base.py?line=5841'>5842</a>\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mKeyError\u001b[39;00m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mNone of [\u001b[39m\u001b[39m{\u001b[39;00mkey\u001b[39m}\u001b[39;00m\u001b[39m] are in the [\u001b[39m\u001b[39m{\u001b[39;00maxis_name\u001b[39m}\u001b[39;00m\u001b[39m]\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m   <a href='file:///c%3A/Users/drsco/AppData/Local/Programs/Python/Python310/lib/site-packages/pandas/core/indexes/base.py?line=5843'>5844</a>\u001b[0m not_found \u001b[39m=\u001b[39m \u001b[39mlist\u001b[39m(ensure_index(key)[missing_mask\u001b[39m.\u001b[39mnonzero()[\u001b[39m0\u001b[39m]]\u001b[39m.\u001b[39munique())\n\u001b[0;32m   <a href='file:///c%3A/Users/drsco/AppData/Local/Programs/Python/Python310/lib/site-packages/pandas/core/indexes/base.py?line=5844'>5845</a>\u001b[0m \u001b[39mraise\u001b[39;00m \u001b[39mKeyError\u001b[39;00m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00mnot_found\u001b[39m}\u001b[39;00m\u001b[39m not in index\u001b[39m\u001b[39m\"\u001b[39m)\n",
+      "\u001b[1;31mKeyError\u001b[0m: \"None of [Int64Index([15], dtype='int64')] are in the [columns]\""
+     ]
+    }
+   ],
+   "source": [
+    "for i in values_l:\n",
+    "    X_train[[i]] = X_train[[i]].sample(frac=0.5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pixel_0_0     0.0\n",
+       "pixel_0_1     0.0\n",
+       "pixel_0_2     2.0\n",
+       "pixel_0_3    16.0\n",
+       "pixel_0_4    10.0\n",
+       "             ... \n",
+       "pixel_7_3    15.0\n",
+       "pixel_7_4    16.0\n",
+       "pixel_7_5    11.0\n",
+       "pixel_7_6     0.0\n",
+       "pixel_7_7     0.0\n",
+       "Name: 278, Length: 64, dtype: float64"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train.iloc[0].replace(np.nan)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "predictions = logisticRegr.predict(X_test)\n",
+    "score = logisticRegr.score(X_test, y_test)\n",
+    "print(score)"
    ]
   },
   {
