case study 3 inst

--- a/case study 2/Dylan/CaseStudy2_D.ipynb
+++ b/case study 2/Dylan/CaseStudy2_D.ipynb
@@ -660,7 +660,6 @@
    "outputs": [],
    "source": [
     "#should we fill in the unknown race?\n",
-    "\n",
     "diabetes_df = diabetes_df['race'].fillna('Caucasian')"
    ]
   },
@@ -670,7 +669,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#pd get dummies"
+    "#pd get dummies\n",
+    "\n",
+    "#number cols\n",
+    "\n",
+    "#categorical vars\n",
+    "\n"
    ]
   }
  ],
